# AGI-investmodel

./: .env.example  .gitignore  .pre-commit-config.yaml  ALL_FILES_MODIFIED.md  ARCHITECTURE.md  CODE_HAWK_FINAL_REPORT.md  CODE_HAWK_STATUS.md  DEBUG_SUMMARY.md  DONE_FILE.md  Dockerfile  FINAL_DEBUG_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  HF_CACHE_SUMMARY.md  MIGRATION.md  MODEL_LOADING_DIAGNOSIS.md  MODEL_LOADING_SUMMARY.md  NEXT_STEPS.md  NO_REDOWNLOAD_GUARANTEE.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  STATUS_REPORT.md  Start-TradeMCP.ps1  TODO_FILE.md  TOKEN_LIMITS_IMPLEMENTATION.md  VALIDATION_REPORT.md  activate-correct-venv.bat  activate-correct-venv.ps1  auto-venv.ps1  check-application-start.py  check-download-status.py  check-health.py  check-model-files.py  check-model-integrity.py  check-venv.bat  check-venv.ps1  check_model_status.py  (+76 more)
.github/workflows/: ci.yml
apps/: tsconfig.json
apps/backend/: package.json  tsconfig.json
docs/: architecture.py
huggingface/models--microsoft--Phi-3-mini-4k-instruct/snapshots/0a67737cc96d2554230f90338b163bc6380a2a85/: CODE_OF_CONDUCT.md  NOTICE.md  README.md  SECURITY.md  configuration_phi3.py  generation_config.json  model.safetensors.index.json  modeling_phi3.py  sample_finetune.py
systemd/: trade-mcp.service
tests/: __init__.py  test_audio.py  test_bot.py  test_browser.py  test_config.py  test_finetune_worker.py  test_health.py  test_integration.py  test_mcp_server.py  test_reasoner.py  test_tools.py
trade_mcp/: __init__.py  __main__.py  audio.py  bot.py  browser.py  config.py  finetune.py  finetune_worker.py  health.py  insider.py  mcp_server.py  metrics.py  reasoner.py  tools.py  webui.py
venv311/: README.md
venv311/Scripts/: activate.bat  pwiz.py
venv_py313_old/: README.md
venv_py313_old/Scripts/: activate.bat  pwiz.py
winsw/: trade-mcp.xml
